objects/EUR_CRM_Apex_Configuration__c.object
<CustomObject>
    <description>Configuration (Master Data) container for EMEA Solution
- Running Number (AO, KE, Sys Admins)</description>
    <fields>
        <fullName>EUR_CRM_Account_RecordType_DevName__c</fullName>
        <description>Used to assign different prefixes and running numbers by Account Record Type</description>
        <label>Account RecordType DevName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <description>Country Code (ALL, GB, DE, SK, FI, LT, RU)</description>
        <inlineHelpText>ALL, AO, AT, DE, FI, GB,  JB, LT, LV, KE, SK, RU</inlineHelpText>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Decimal_Value__c</fullName>
        <label>Decimal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Master_Running_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Running Number</label>
        <referenceTo>EUR_CRM_Apex_Configuration__c</referenceTo>
        <relationshipLabel>Detail Account Running Numbers</relationshipLabel>
        <relationshipName>Apex_Configurations_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Module__c</fullName>
        <label>Module</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo_RecordType_DevName__c</fullName>
        <label>ObjPromo RecordType DevName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Prefix__c</fullName>
        <description>For Running - Auto Number Creation.</description>
        <label>Prefix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Running_Number_Length__c</fullName>
        <label>Running Number Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Running_Number__c</fullName>
        <label>Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Module__c</fullName>
        <label>Sub Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_VAT_Rate__c</fullName>
        <label>VAT Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Apex Configuration (EU)</label>
    <listViews>
        <fullName>EUR_All_Running_Number</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Module__c</columns>
        <columns>EUR_CRM_Prefix__c</columns>
        <columns>EUR_CRM_Running_Number__c</columns>
        <columns>EUR_CRM_Running_Number_Length__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Module__c</field>
            <operation>equals</operation>
            <value>EUR_CRM_Running_Number</value>
        </filters>
        <label>EUR All Running Number</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_DK</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Prefix__c</columns>
        <columns>EUR_CRM_Module__c</columns>
        <columns>EUR_CRM_Running_Number__c</columns>
        <columns>EUR_CRM_Running_Number_Length__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Country_Code__c</field>
            <operation>equals</operation>
            <value>DK</value>
        </filters>
        <label>DK Configuration</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_FI_Contract_Builder_Configurations</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Module__c</columns>
        <columns>EUR_CRM_Sub_Module__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Number_Value__c</columns>
        <columns>EUR_CRM_Decimal_Value__c</columns>
        <columns>EUR_CRM_Text_Value__c</columns>
        <columns>EUR_CRM_Description__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Apex_Configuration__c.EUR_CRM_General_Configuration</value>
        </filters>
        <filters>
            <field>EUR_CRM_Module__c</field>
            <operation>equals</operation>
            <value>EUR_CRM_FI_ContractBuilder</value>
        </filters>
        <label>FI Contract Builder Configurations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Apex Configuration (EU) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Configurations (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_Account_Running_Number_Detail</fullName>
        <active>true</active>
        <label>EUR CRM Account Running Number (Detail)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Account_Running_Number_Master</fullName>
        <active>true</active>
        <label>EUR CRM Account Running Number (Master)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Account_Running_Number_Normal</fullName>
        <active>true</active>
        <label>EUR CRM Account Running Number (Normal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Approval_Process_Routing</fullName>
        <active>true</active>
        <description>For API Access to Non-Standard Approval Processes</description>
        <label>Approval Process Routing</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_CO_Evaluation_Color</fullName>
        <active>true</active>
        <label>EUR CRM CO Evaluation Color</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_General_Configuration</fullName>
        <active>true</active>
        <label>General Configuration</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_ObjPromo_Running_Number_Normal</fullName>
        <active>true</active>
        <label>EUR CRM ObjPromo Running Number (Normal)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Running_Number</fullName>
        <active>true</active>
        <description>For Running Number Records that can be used my multiple affiliates</description>
        <label>Running Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_VAT_Rate</fullName>
        <active>true</active>
        <label>EUR CRM VAT Rate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>